loaders added in calendar and fixed layout issue in tutor profile

--- a/src/pages/Profiles/Tutor/style.module.css
+++ b/src/pages/Profiles/Tutor/style.module.css
@@ -23,14 +23,14 @@
     z-index: 20;
     left: 0;
     bottom: 0;
-    padding-bottom: 60px;
+    padding-bottom: 0px;
     width: 100%;
     text-align: center;
     background-image: linear-gradient(to bottom, transparent, #F3F5F7, #F3F5F7);
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    height: 203px;
+    height: 120px;
 }
 .profileIcon{
     position: absolute;
